Fix gap between how we work and what's happening next (#117)
* fix bottom padding on how we work

* move css rule into media query

* remove obsolete p-0 css rule

---------

--- a/CooperationHullMainSite/wwwroot/css/site.css
+++ b/CooperationHullMainSite/wwwroot/css/site.css
@@ -418,6 +418,7 @@ h1 {
 
     color: white;
     padding: 2rem;
+    padding-bottom: 0;
   }
 
   .hww::before {
